added check on the candidateView when showing interviewers

--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -44,7 +44,7 @@
       <label>Screener:</label> {{candidate.screenerInitials}}
     </div>
     <div class="info-group">
-      <label>Interviewers:</label> {{candidate.Interview.interviewer_1}}, {{candidate.Interview.interviewer_2}}
+      <label>Interviewers:</label> {{interviewers}}
     </div>
 	</div>
 </script>
