updated landing page logo

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <img src="images/amexLogo.png" alt="Amex Logo" id="amexLogo">
+  <img src="images/home-logo.png" alt="Amex Logo" id="amexLogo">
 
   <h2 id="slogan">Welcome to the American Express Campus Recruitment Tool!</h2>
 
