Fixed ipad styling

--- a/app/views/puzzleCanvas.html
+++ b/app/views/puzzleCanvas.html
@@ -1,6 +1,6 @@
 <div>
   <div class="container  col-md-10 col-md-offset-1">
-    <div class="row tools-bar center-toolbar" id="options" >
+    <div class="row tools-bar-puzzle center-toolbar" id="options" >
       <div class="btn-group" role="group" aria-label="...">
         <button value="black" type="button" class="btn btn-default color-button active">
           <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
@@ -60,7 +60,7 @@
       <canvas class="" id="c" height="950" width="650" style="border: 1px solid black"></canvas>
     </div>
 
-    <div class="row col-md-2 col-md-offset-5 btn-next">
+    <div class="row text-center col-md-2 col-md-offset-5 btn-next">
       <button ng-click="next()" id="next" class="btn btn-danger">Next</button>
     </div>
   </div>
