--- a/app/views/softpen.html
+++ b/app/views/softpen.html
@@ -72,7 +72,7 @@
       {{nextButtonMessage}}
     </div>
 
-    <div class="row col-md-2 col-md-offset-5 btn-next">
+    <div class="row text-center col-md-2 col-md-offset-5 btn-next">
       <button ng-click="next()" id="next" class="btn btn-danger">Next</button>
     </div>
   </div>
