--- a/app/styles/softpen.css
+++ b/app/styles/softpen.css
@@ -16,6 +16,13 @@
   margin-left: 55px;
 }
 
+.tools-bar-puzzle {
+  position: absolute;
+  z-index: 2;
+  background-color: white;
+  margin-left: 110px;
+}
+
 .camera-pull-right {
   margin-left: 30px;
 }
@@ -23,4 +30,18 @@
 .btn-next {
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait)
+and (-webkit-min-device-pixel-ratio: 1)  {
+  .tools-bar {
+    margin-left: 0px;
+  }
+
+  .tools-bar-puzzle {
+    margin-left: 25px;
+  }
 }
